Current
Fix: use proper instances for beforeClass callback when different instances collide on hash codes
Fixed: Fix parallel and configfailurepolicy parsing in tr_TR locale
Fixed: Wrong results from GuiceBasedObjectDispenser when there's Object#hashCode collision
Changed: GITHUB-2564: Source code is split into several modules for better modularity in the future (for now only a combined jar is released as it was before)
Added: GITHUB-2564: Added license files as META-INF/LICENSE.txt within the released jar
Test: GITHUB-2564: Added pax-exam-based OSGi test to verify the manifest
Changed: GITHUB-2564: Migrated the build to Gradle 7.0.2
Fixed: GITHUB-2576: Guice 5.0 drops no-aop variant, so TestNG should probably upgrade and avoid no-aop dependency (Nan Liang)
Fixed: GITHUB-2566: Reporter#getOutput(ITestResult tr) uses Map.get(tr.hashCode()) which might result in surprising results (Krishnan Mahadevan)
Fixed: GITHUB-2565: Dataprovider only supporting a raw type for Iterator return type (Krishnan Mahadevan)
Fixed: GITHUB-2557: Flaky test: ThreadAffinityTest#testThreadAffinity (Krishnan Mahadevan)
Fixed: GITHUB-2567: MethodHelper#CANONICAL_NAME_CACHE is never reset, so it could result in a memory leak (Krishnan Mahadevan)
Fixed: GITHUB-2540: assertEquals(Collection) need check order (Stuart Marks & Julien Herr)
Fixed: GITHUB-2360: Groovy 3 internal generated methods are detected as test methods (Ian Springer)
Fixed: GITHUB-2522: TestNG 7.4.0 Can not skip test through listener (Nan Liang)
Fixed: GITHUB-2529: Link to testng.xml in CONTRIBUTING.md file was dead
Fixed: GITHUB-2521: The method has a separate string with 'invocation-number' parameters for each failure (does not group) in 'testng-failed.xml' file for DataProvider + Factory (Pavel Sakharchuk)
Fixed: GITHUB-2426: New feature TestNG - getFactoryMethodParamsInfo on ConfigurationMethod (Krishnan Mahadevan)